--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@ h2.manifesto{
           Visiting Scholar &mdash; University of Cambridge&ensp;(Prof. Nicola Clayton FRS)<br>
           MSc &mdash; King's College London, IoPPN<br>
           MA &mdash; University of London<br>
+          BS &mdash; Point Park University<br>
           BA &mdash; Point Park University
         </div>
       </div>
